# rholang-lsp

./: .gitignore  Cargo.toml  Makefile  README.md
editors/vscode/: language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
queries/: highlights.scm  locals.scm
src/: backend.rs  definition.rs  diagnostics.rs  document.rs  hover.rs  main.rs  rename.rs  semantic_tokens.rs  symbols.rs
