[package]
name = "rholang-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rholang-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tree-sitter = "0.25"
tree-sitter-rholang = { path = "../tree-sitter-rholang" }
dashmap = "6"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
